@@ -38,6 +38,7 @@
   <script src="../js/torrent.js"></script>
   <script src="../js/torrentsettings.js"></script>
   <script src="../js/protocol.js"></script>
+  <script src="../js/net_errors.js"></script>
   <script src="../js/dht.js"></script>
   <script src="../js/buffer.js"></script>
   <script src="../js/peer.js"></script>
